; ModuleID = '/home/carl/AnghaBench/jerryscript/jerry-core/ecma/builtin-objects/extr_ecma-builtin-object.c_ecma_builtin_object_object_define_property.c'
source_filename = "/home/carl/AnghaBench/jerryscript/jerry-core/ecma/builtin-objects/extr_ecma-builtin-object.c_ecma_builtin_object_object_define_property.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@ECMA_PROP_IS_THROW = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ecma_builtin_object_object_define_property(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_5__, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %11 = load i32, i32* %7, align 4
  %12 = call i32 @ecma_op_to_property_descriptor(i32 %11, %struct.TYPE_5__* %8)
  store i32 %12, i32* %9, align 4
  %13 = load i32, i32* %9, align 4
  %14 = call i64 @ECMA_IS_VALUE_ERROR(i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %3
  %17 = load i32, i32* %9, align 4
  store i32 %17, i32* %4, align 4
  br label %41

18:                                               ; preds = %3
  %19 = load i32, i32* @ECMA_PROP_IS_THROW, align 4
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = or i32 %21, %19
  store i32 %22, i32* %20, align 4
  %23 = load i32*, i32** %5, align 8
  %24 = load i32*, i32** %6, align 8
  %25 = call i32 @ecma_op_object_define_own_property(i32* %23, i32* %24, %struct.TYPE_5__* %8)
  store i32 %25, i32* %10, align 4
  %26 = call i32 @ecma_free_property_descriptor(%struct.TYPE_5__* %8)
  %27 = load i32, i32* %9, align 4
  %28 = call i32 @ecma_free_value(i32 %27)
  %29 = load i32, i32* %10, align 4
  %30 = call i64 @ECMA_IS_VALUE_ERROR(i32 %29)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %34

32:                                               ; preds = %18
  %33 = load i32, i32* %10, align 4
  store i32 %33, i32* %4, align 4
  br label %41

34:                                               ; preds = %18
  %35 = load i32*, i32** %5, align 8
  %36 = call i32 @ecma_ref_object(i32* %35)
  %37 = load i32, i32* %10, align 4
  %38 = call i32 @ecma_free_value(i32 %37)
  %39 = load i32*, i32** %5, align 8
  %40 = call i32 @ecma_make_object_value(i32* %39)
  store i32 %40, i32* %4, align 4
  br label %41

41:                                               ; preds = %34, %32, %16
  %42 = load i32, i32* %4, align 4
  ret i32 %42
}

declare dso_local i32 @ecma_op_to_property_descriptor(i32, %struct.TYPE_5__*) #1

declare dso_local i64 @ECMA_IS_VALUE_ERROR(i32) #1

declare dso_local i32 @ecma_op_object_define_own_property(i32*, i32*, %struct.TYPE_5__*) #1

declare dso_local i32 @ecma_free_property_descriptor(%struct.TYPE_5__*) #1

declare dso_local i32 @ecma_free_value(i32) #1

declare dso_local i32 @ecma_ref_object(i32*) #1

declare dso_local i32 @ecma_make_object_value(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
